[gd_scene load_steps=8 format=2]

[ext_resource path="res://etc/game_over_gui.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/fonts/CelticSea-8MLXz.ttf"

[sub_resource type="DynamicFont" id=2]
size = 80
use_filter = true
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 65
use_filter = true
font_data = SubResource( 1 )

[sub_resource type="ImageTexture" id=4]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 100, 40 )

[sub_resource type="DynamicFont" id=6]
size = 80
use_filter = true
font_data = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Popup" type="Popup" parent="."]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Popup"]
margin_left = 3.0
margin_right = 568.0
margin_bottom = 336.0
color = Color( 0.784314, 0.168627, 0.168627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="Popup"]
margin_right = 570.0
margin_bottom = 94.0
color = Color( 0.2, 0.152941, 0.145098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Popup"]
margin_left = 116.19
margin_top = 9.25687
margin_right = 476.19
margin_bottom = 90.2569
custom_fonts/font = SubResource( 2 )
text = "Game Over!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Popup"]
margin_left = 53.0
margin_top = 138.0
margin_right = 528.0
margin_bottom = 204.0
custom_fonts/font = SubResource( 3 )
text = "Final Score: 300"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonOK" type="TouchScreenButton" parent="Popup"]
position = Vector2( 437.05, 266 )
normal = SubResource( 4 )
shape = SubResource( 5 )

[node name="Label3" type="Label" parent="Popup/ButtonOK"]
margin_left = -55.0
margin_top = -33.0
margin_right = 48.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 6 )
text = "OK"
align = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackShadow" type="ColorRect" parent="."]
visible = false
margin_left = -102.0
margin_top = -87.0
margin_right = 846.0
margin_bottom = 3117.0
focus_previous = NodePath("../Popup")
color = Color( 0.172549, 0.054902, 0.054902, 0.423529 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="focus_exited" from="Popup" to="." method="_on_Popup_focus_exited"]
[connection signal="pressed" from="Popup/ButtonOK" to="." method="_on_ButtonOK_pressed"]
